--- a/WEEK-1/TABLE.HTML
+++ b/WEEK-1/TABLE.HTML
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Academic Timetable</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="TABLE.CSS">
 </head>
 <body>
   <header>
